fix spacing card_bar

--- a/src/pages/Care/Care.css
+++ b/src/pages/Care/Care.css
@@ -3,7 +3,8 @@
 }
 
 .care-title {
-  font-family: "Londrina Shadow", cursive;
+  font-family: "Cabin", sans-serif;
+  font-weight: bold;
   color: #ac4d9f;
   font-size: 73px;
   margin: 20px 0;
@@ -16,7 +17,7 @@
   border-radius: 20px;
   box-shadow: 10px 10px 10px 3px rgba(0, 0, 0, 0.4);
   transition: all 0.2s ease-in-out;
-  margin: 0 auto;
+  margin: 1.5rem auto;
   width: 80%;
 }
 
@@ -32,6 +33,7 @@
 }
 
 .card__bar {
+  width: 85px;
   position: relative;
   padding: 10px 20px;
 }
@@ -66,6 +68,7 @@
   text-align: right;
   top: 13px;
   left: 30px;
+  color: white;
 }
 
 .card__bars {
